@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ListDealsUI{
    + create ListDealsController
}

class ListDealsController{
    + getInstance()
    + listDeals(sortAlg, order)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getAdvertisementRepository()
}


class Advertisement {
    - Date date
    - Request request
    - CommissionType commissionType
    - double commissionValue
    - Store store
    - List<Visit> visits
    - List<Offer> offers
    + getOffers(): List<Offer>
    + getStatus(): Status
    + getAcceptedOffer(): Offer
    + adAndDealToString(): String
}

enum ComissionType {
    - String description
}

class AdvertisementRepository {
    + getAdvertisementList()
}

class AdvertisementCollection {
    + madeDealsSort(algorithm, order): List<Advertisement>
    + selectionSort(advertisementList, order): List<Advertisement>
    + bubbleSort(advertisementList, order): List<Advertisement>
}

Repositories -> Repositories : instance
Repositories --> "1" AdvertisementCollection
ListDealsController .> Repositories : repositories

ListDealsUI .> ListDealsController

Repositories --> "1" AdvertisementRepository

AdvertisementRepository --> "*" Advertisement

Advertisement --> "1" ComissionType


@enduml